fix tap highlight on mobile

--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-tap-highlight-color: transparent; /* iOS Safari ve Android */
+    outline: none; /* Tarayıcı outline'larını kaldırır */
 }
 
 button:hover {
